@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Nov 16 15:29:13 2001 -->
+<!-- Tue Nov 20 14:34:21 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -153,6 +153,8 @@ an interpreted, interactive, object-oriented programming language.
 <li>Supports vpopmail and vmailmgr.<br><br>
 
 <li>Pattern matching using Unix shell-style wildcard characters.<br><br>
+
+<li>Supports DBM/GDBM style databases.<br><br>
 
 <li>Optional delivery logging.<br><br>
 
